@@ -1,0 +1,19 @@
+<html>
+    <head>
+	<TITLE>Testing AREA tag handling</TITLE>
+    </head>
+    <body>
+	<MAP NAME="SOME_MAP">
+	    <AREA HREF="http://www.msnbc.com/area" COORDS="1,2,3,4"></AREA>
+	    <AREA HREF="http://www.cnn.com/area" COORDS="5,6,7,8">
+	    <AREA HREF="http://www.cpan.org/area" COORDS="10,11,12,13" />
+	</MAP>
+	<MAP NAME="OTHER_MAP">
+	    <AREA NOHREF COORDS="1,2,3,4">
+	    <AREA HREF="http://www.slashdot.org">
+	</MAP>
+	<IMG SRC="SOME_IMAGE" USEMAP="#SOME_MAP">
+	<IMG SRC="SOME_IMAGE" USEMAP="#OTHER_MAP">
+    </body>
+</html>
+
